src/objects/AMA_Agreement_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Run_AMA_Business_Rules__c</fullName>
        <formula>IF(AND(OR(TPA_Request__r.Is_Potential_Vendor_Case__c, ISPICKVAL(TPA_Request__r.AMA_USPrescriberData__c, &apos;Yes&apos;)), 
OR(
ISPICKVAL(TPA_Request__r.Request_Status__c, &apos;In Review By IQVIA&apos;), 
ISPICKVAL(TPA_Request__r.Request_Status__c, &apos;TPA Approved Awaiting AMA Approval&apos;)), !ISBLANK(TPA_Request__r.Service_Provider_Address__c), !ISBLANK(TPA_Request__r.Vendor_Contact_e_mail__c)), HYPERLINK(&quot;/apex/VFP_TPA_Run_AMA_Business_Rule?id=&quot;&amp;Id&amp;&quot;&amp;reqId=&quot;&amp;Id&amp;&quot;&amp;type=vpsubmit&amp;action=acc&quot;, IMAGE(&quot;/resource/TPARunAMABusinessRule&quot;, &quot;Run TPA Business Rules&quot;), &quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validate Revised AMA Fields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scenarios_Satisfied_Details__c</fullName>
        <label>Scenarios Satisfied Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Send_DBL_Notification_To_AMA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Send DBL Notification To AMA for either SB2 or CSF</description>
        <label>To Send DBL Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Offshore_Consent_Form__c</fullName>
        <formula>IF( AND ( ISPICKVAL(TPA_Request__r.AMA_USPrescriberData__c , &apos;Yes&apos;), !ISBLANK(TPA_Request__r.Service_Provider_Address__c), !ISBLANK(TPA_Request__r.Vendor_Contact_e_mail__c), OR(ISPICKVAL(TPA_Request__r.Request_Status__c , &apos;In Review By IMS&apos;),ISPICKVAL(TPA_Request__r.Request_Status__c , &apos;In Review By IQVIA&apos;),ISPICKVAL(TPA_Request__r.Request_Status__c , &apos;In Review By QuintilesIMS&apos;) , ISPICKVAL(TPA_Request__r.Request_Status__c , &apos;TPA Approved Awaiting AMA Approval&apos;), ISPICKVAL(TPA_Request__r.Request_Status__c , &apos;Pending Vendor AMA Fee Acknowledgement&apos;) ), ISBLANK( TEXT(Status_of_Offshore_Process__c)) ) , HYPERLINK(&quot;/apex/VFP_TPA_AMAOffshoreTemplate?id=&quot;&amp;Id&amp;&quot;&amp;reqId=&quot;&amp;TPA_Request__c&amp;&quot;&amp;viewMode=offshore&amp;type=TpUsRequest&quot;, IMAGE(&quot;/resource/TPA_AMA_SendOffshoreConsentForm&quot;, &quot;Send Offshore Consent Form To Vendor&quot;), &quot;_self&quot;), NULL )</formula>
        <label>Send Offshore Consent Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Offshore_Questionnaire__c</fullName>
        <formula>IF( AND ( ISPICKVAL(TPA_Request__r.AMA_USPrescriberData__c , &apos;Yes&apos;), !ISBLANK(TPA_Request__r.Service_Provider_Address__c), !ISBLANK(TPA_Request__r.Vendor_Contact_e_mail__c), OR(ISPICKVAL(TPA_Request__r.Request_Status__c , &apos;In Review By IMS&apos;),ISPICKVAL(TPA_Request__r.Request_Status__c , &apos;In Review By QuintilesIMS&apos;), ISPICKVAL(TPA_Request__r.Request_Status__c , &apos;TPA Approved Awaiting AMA Approval&apos;)), ISBLANK( TEXT(Status_of_Offshore_Questionnaire__c)) ) , HYPERLINK(&quot;apex/AMA_Offshore_Template_Page?id=&quot;&amp;Id&amp;&quot;&amp;reqId=&quot;&amp;TPA_Request__c&amp;&quot;&amp;viewMode=offshore&amp;type=TpUsRequest&quot;, IMAGE(&quot;/resource/AMASendOffshoreQuestionnaire&quot;, &quot;Send Offshore Questionnaire To Vendor&quot;), &quot;_self&quot;), NULL )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Offshore Questionnaire</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_copy_of_the_Foreign_Storage_invoice__c</fullName>
        <label>Send copy of the Foreign Storage invoice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_copy_of_the_invoice__c</fullName>
        <description>Created under Issue-11623</description>
        <label>Send copy of the invoice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specific_variables_requested__c</fullName>
        <inlineHelpText>Tell us about the project</inlineHelpText>
        <label>Specific variables requested</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_of_Cancelation_Request__c</fullName>
        <label>Status of Cancelation Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Vendor Cancelation Acknowledgement</fullName>
                </value>
                <value>
                    <fullName>Awaiting AMA Response to Vendor Cancelation Request</fullName>
                </value>
                <value>
                    <fullName>AMA responded with additional questions</fullName>
                </value>
                <value>
                    <fullName>AMA has approved cancelation and full/partial credit</fullName>
                </value>
                <value>
                    <fullName>AMA did not approve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_Offshore_Process__c</fullName>
        <description>Created under ER-3947</description>
        <label>Status of Offshore Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Vendor Response: AMA Offshore Consent form has been sent to Vendor</fullName>
                </value>
                <value>
                    <fullName>Vendor completed AMA Offshore Consent with Pre-Approved IT Technologies: Regenerate agreements</fullName>
                </value>
                <value>
                    <fullName>Awaiting AMA Response: Offshore Consent form requires AMA review/approval</fullName>
                </value>
                <value>
                    <fullName>AMA Approved Offshore Consent: Verify AMA Child Record regenerate agreements</fullName>
                </value>
                <value>
                    <fullName>AMA Responded: AMA Offshore Consent form has been Denied</fullName>
                </value>
                <value>
                    <fullName>AMA Responded: AMA has Additional Questions</fullName>
                </value>
                <value>
                    <fullName>Vendor selected non-approved AMA location - AMA Offshore Consent form has not been sent to Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_Offshore_Questionnaire__c</fullName>
        <label>Status of Offshore Questionnaire</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Vendor Response: AMA Offshore Questionnaire has been sent to Vendor</fullName>
                </value>
                <value>
                    <fullName>Vendor has Completed AMA Offshore Questionnaire: Now appended to AMA Agreement Record</fullName>
                </value>
                <value>
                    <fullName>Awaiting AMA Response: Offshore Questionnaire has been completed by Vendor and sent to AMA</fullName>
                </value>
                <value>
                    <fullName>AMA Responded: AMA Offshore Questionnaire has been APPROVED</fullName>
                </value>
                <value>
                    <fullName>AMA Responded: AMA Offshore Questionnaire has been DENIED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_Renewal_Process__c</fullName>
        <description>created under ER-3074</description>
        <label>Status of Renewal Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Vendor Response for renewal</fullName>
                </value>
                <value>
                    <fullName>Vendor Responded Cancel</fullName>
                </value>
                <value>
                    <fullName>AMA Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Vendor Confirmed Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Identification_Number__c</fullName>
        <label>Tax Identification Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_AMA_Contract_Detail_Formula__c</fullName>
        <formula>HYPERLINK($Setup.TPA_Settings__c.Internal_SFDC_URL__c + &quot;/&quot; +Ex_TPA_AMA_Contract_Detail__c, Ex_TPA_AMA_Contract_Detail_Name__c, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TPA AMA Contract Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_AMA_Contract_Detail_Info__c</fullName>
        <description>To store description of ama contract detail record i.e. the record id and time it was inserted</description>
        <label>TPA AMA Contract Detail Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_AMA_Contract_Detail_Info_formula__c</fullName>
        <formula>IF(AND(ISPICKVAL(TPA_Request__r.Request_Status__c, &apos;In Effect&apos;), Is_AMA_License_Required__c == true,  AMA_Manual_Review__c == false), HYPERLINK(&quot;https://iqvia.my.salesforce.com/&quot; +TPA_AMA_Contract_Detail_Info__c, TPA_AMA_Contract_Detail_Info__c &amp; &quot; inserted on &quot; &amp; Text(NOW()) , &quot;_blank&quot;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executed AMA Contract Detail Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Account_SAP_Code__c</fullName>
        <description>Created under ER-3336</description>
        <formula>IF(TPA_Request__r.Service_Provider_Address__c != null,
		IF(NOT(ISBLANK(TPA_Request__r.Service_Provider_Address__r.SAP_Reference__c)),
		TPA_Request__r.Service_Provider_Address__r.SAP_Reference__c,
		TPA_Request__r.Service_Provider_Address__r.AMA_SAP_Code__c
		),
                &apos;&apos;
		)</formula>
        <inlineHelpText>It is used for AMA Billing SAP Report only</inlineHelpText>
        <label>TPA Account SAP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TPA Request</label>
        <referenceTo>TPA_Request__c</referenceTo>
        <relationshipName>AMA_Agreement_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
    	<fullName>TPA_Request_Number__c</fullName>
    	<formula>TPA_Request__r.Name</formula>
    	<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    	<label>TPA Request Number</label>
    	<type>Text</type>
    </fields>
    <fields>
        <fullName>Technologies_to_access_AMA_PPD_by_vendor__c</fullName>
        <description>Created under ER-3947</description>
        <label>Technologies to access AMA-PPD by vendor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Webex, gotomypc</fullName>
                </value>
                <value>
                    <fullName>Citrix, VPC</fullName>
                </value>
                <value>
                    <fullName>RDP</fullName>
                </value>
                <value>
                    <fullName>Amazon Workspaces, ONLY US Data Centers using VPC &amp; KMS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_s_selected_for_remote_access__c</fullName>
        <label>Technology(s) selected for remote access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Citrix, VDI via VMware</fullName>
                </value>
                <value>
                    <fullName>Azure VDI, Windows VPS</fullName>
                </value>
                <value>
                    <fullName>Amazon Workspaces (AWS VDI)</fullName>
                </value>
                <value>
                    <fullName>Microsoft RDP (Windows RDP) via VDI</fullName>
                </value>
                <value>
                    <fullName>AWS EC2 Bastion Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tell_us_about_the_project__c</fullName>
        <description>Offshore Section</description>
        <label>Tell us about the project</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Apttus__APTS_Template__c.Apttus__IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipName>TPA_AMA_Agreement_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term_requested_to_cancel__c</fullName>
        <description>Created under ER-3888</description>
        <label>Term requested to cancel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_for_vendor_who_requested_offshore__c</fullName>
        <description>Created under ER-3947</description>
        <label>Title for vendor who requested offshore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Today_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor_AMA_Fee_Response__c</fullName>
        <description>created under ER-3081</description>
        <label>Vendor AMA Fee Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>acknowledged</fullName>
                </value>
                <value>
                    <fullName>declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_AMA_Foreign_Storage_Fee_Response__c</fullName>
        <label>Vendor AMA Foreign Storage Fee Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>acknowledged</fullName>
                </value>
                <value>
                    <fullName>declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Account_Address__c</fullName>
        <formula>TPA_Request__r.Service_Provider_Billing_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Cancelation_Response_Date__c</fullName>
        <description>Created under ER-3586</description>
        <label>Vendor Cancelation Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact_Name__c</fullName>
        <formula>TPA_Request__r.Service_Provider_Contact_f__c</formula>
        <label>Vendor Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Employee_Accessed_Data_in_country__c</fullName>
        <description>Vendor Employee country location(s) where the IQVIA Data will be remotely accessed:</description>
        <inlineHelpText>Vendor Employee country location(s) where the IQVIA Data will be remotely accessed:</inlineHelpText>
        <label>Vendor Employee Access Data in country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Congo</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Employee_Store_Data_in_country__c</fullName>
        <description>Vendor Employee country location(s) where the IQVIA Data will be stored:</description>
        <inlineHelpText>Vendor Employee country location(s) where the IQVIA Data will be stored:</inlineHelpText>
        <label>Vendor Employee Store Data in country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Congo</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Legal_Name__c</fullName>
        <formula>TPA_Request__r.Service_Provider_Address__r.Name</formula>
        <label>Vendor Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Name_who_Acknowledged_Cancelation__c</fullName>
        <label>Vendor Name who Acknowledged Cancelation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Name_who_Cancelled_Renewal__c</fullName>
        <description>Created under ER-3074</description>
        <label>Vendor Name who Cancelled Renewal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Name_who_requested_offshore__c</fullName>
        <description>Created under ER-3947</description>
        <label>Vendor Name who requested offshore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Reasons_for_Termination__c</fullName>
        <label>Vendor Reasons for Termination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project will not renew for next calendar year</fullName>
                </value>
                <value>
                    <fullName>No AMA data was shared</fullName>
                </value>
                <value>
                    <fullName>Error in selection of Use and/or Frequency of data delivery</fullName>
                </value>
                <value>
                    <fullName>Project was cancelled. No AMA data was shared</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_employee_access_data_in_country__c</fullName>
        <description>Created under ER-3947</description>
        <label>Vendor employee access data in country:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_req_Storage_Permission_from_NonUS__c</fullName>
        <description>Is Vendor requires storage permissions from a non-U.S. location:</description>
        <inlineHelpText>Is Vendor requires storage permissions from a non-U.S. location:</inlineHelpText>
        <label>Vendor req Storage Permission from NonUS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_require_Remote_Access_from_NonUS__c</fullName>
        <description>Is Vendor requires remote access permissions from a non-U.S. location</description>
        <inlineHelpText>Is Vendor requires remote access permissions from a non-U.S. location</inlineHelpText>
        <label>Vendor require Remote Access from NonUS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volume_of_records__c</fullName>
        <inlineHelpText>Tell us about the project</inlineHelpText>
        <label>Volume of records</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where_will_the_data_reside__c</fullName>
        <description>Offshore :- (Location of Data Center; Country, State)</description>
        <label>Where will the data reside?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>With_the_overseas_entity__c</fullName>
        <inlineHelpText>With the overseas entity?</inlineHelpText>
        <label>With the overseas entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>app_software_used_at_offshore__c</fullName>
        <inlineHelpText>What application software will be used at offshore entity’s location?</inlineHelpText>
        <label>app software used at offshore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>offshore_entity_interacting_with_data__c</fullName>
        <inlineHelpText>How will the offshore entity be interacting with the data on behalf of the User-Customer?</inlineHelpText>
        <label>offshore entity interacting with data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pharmaceutical_client_accessed_overseas__c</fullName>
        <inlineHelpText>With the pharmaceutical client in the U.S., but accessed from overseas?</inlineHelpText>
        <label>pharmaceutical client accessed overseas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>physical_security_procedures__c</fullName>
        <inlineHelpText>What physical security procedures will be in place at the offshore location?</inlineHelpText>
        <label>physical security procedures</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_provider_accessed_overseas__c</fullName>
        <description>Offshore Section</description>
        <inlineHelpText>With the service provider in the U.S., but accessed overseas?</inlineHelpText>
        <label>service provider accessed overseas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TPA AMA Agreement</label>
    <nameField>
        <displayFormat>AMA-{0000}</displayFormat>
        <label>AMA Agreement Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TPA AMA Agreement Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Test_Reason__c</fullName>
        <label>Test Reason</label>
    </sharingReasons>
</CustomObject>